tests/compile_fail/exist_edge_to_new_val_target.rs
use grw::modify::*;

fn main() {
    let _ = e() >> N(5).val("hello");
}
